Update assests images

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "react-native-ios",
-    "slug": "react-native-ios",
+    "name": "bohjalmarfagerstrom-iOS",
+    "slug": "bohjalmarfagerstrom-ios",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
