--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.5.0",
     "react-native-web": "~0.18.7",
-    "tailwindcss": "^3.2.3"
+    "tailwindcss": "^3.2.3",
+    "expo-updates": "~0.15.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
